# paper-search

./: .env.example  .gitignore  README.md  pyproject.toml
config/: queries.yaml  rss_feeds.yaml  seminal_papers.txt
config/systemd/: papersearch.service  papersearch.timer
scripts/: add_seminal_papers.py  run_collection.py  setup_database.py  test_mcp.py
src/papersearch/: __init__.py  config.py  zotero_client.py
src/papersearch/collectors/: __init__.py  arxiv_collector.py  base.py  deduplicator.py  rss_collector.py
src/papersearch/db/: __init__.py  models.py  repository.py  schema.py
src/papersearch/mcp/: __init__.py  __main__.py  server.py
src/papersearch/pipeline/: __init__.py  daily_runner.py  rate_limiter.py
src/papersearch/processing/: __init__.py  embeddings.py  extractors.py  summarizer.py
tests/: __init__.py  test_collectors.py  test_mcp_tools.py  test_summarizer.py
